--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
-    <string name="app_name">tennis_tune</string>
+    <string name="app_name">TennisTune</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="action_settings">Set Up</string>
+    <string name="title_settings_page">Settings</string>
+    <string name="button_start">Start</string>
+    <string name="button_back">Go Back</string>
 </resources>
