Disable save button if no change has been made

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="unsaved_changes_message">You have unsaved changes. Do you want to discard them?</string>
     <string name="discard">Discard</string>
     <string name="cancel">Cancel</string>
-    <string name="settings_saved">Settings saved</string>
+    <string name="settings_changed">Settings changed</string>
 
 </resources>
