Adjust racquet list UI & add icons

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="new_racquet">New Racquet</string>
     <string name="add_edit_racquet">Add/Edit Racquet</string>
     <string name="check_mark_content_description">Check mark for selected racquet</string>
-    <string name="delete">Delete</string>
+    <string name="delete_this_racquet">Delete this racquet</string>
+    <string name="edit_this_racquet">Edit this racquet</string>
 
 </resources>
