--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="button_save">Save</string>
     <string name="button_settings">Settings</string>
     <string name="display_unit_label">Display Unit</string>
-    <string name="racquet_head_size_sq_in_label">Racquet Head Size (sq in)</string>
+    <string name="racquet_head_size_sq_in_label">Racquet Head Size (in²)</string>
     <string name="string_mass_density_g_m_label">String Mass Density (g/m)</string>
     <string name="racquet_head_size_100">100</string>
     <string name="string_mass_density">1.53</string>
